<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.scrollingtext.MainActivity">

    <TextView
        android:id="@+id/article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/padding_regular"
        android:text="@string/article_title1"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@android:color/white"
        android:textSize="24dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:background="#F9C63A"
            android:onClick="sports"
            android:text="KARIR"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/button3"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="56dp"
            android:background="#F9C63A"
            android:onClick="pariwisata"
            android:text="POLITIK"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/button4"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="56dp"
            android:background="#F9C63A"
            android:onClick="kesehatan"
            android:text="OLAHRAGA"
            android:textColor="#FFF" />

    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_heading"
        android:layout_marginTop="56dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/article_subheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:text="@string/article_subtitle1"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textColor="#0B0A0A"
                android:textSize="18dp" />

            <ImageView
                android:id="@+id/ivDetailPhoto"
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/uiux" />

            <TextView
                android:id="@+id/article1"
                android:layout_width="wrap_content"
                android:layout_height="514dp"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="@string/article_text1"
                android:textSize="14dp" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
