<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pariwisata">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.scrollingtext.MainActivity">

        <TextView
            android:id="@+id/article_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="@dimen/padding_regular"
            android:text="@string/article_title2"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="@android:color/white"
            android:textSize="24dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:onClick="sports"
                android:text="Hiburan"
                android:layout_marginTop="56dp"
                android:textColor="#FFF"
                android:background="#F9C63A" />

            <Button
                android:id="@+id/button3"
                android:layout_marginTop="56dp"
                android:layout_width="116dp"
                android:layout_marginLeft="8dp"
                android:layout_height="wrap_content"
                android:onClick="pariwisata"
                android:text="Olahraga"
                android:textColor="#FFF"
                android:background="#F9C63A"/>

            <Button
                android:id="@+id/button4"
                android:layout_marginTop="56dp"
                android:layout_marginLeft="8dp"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:onClick="kesehatan"
                android:text="Kesehatan"
                android:textColor="#FFF"
                android:background="#F9C63A"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/article_heading"
            android:layout_marginTop="56dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/article_subheading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_regular"
                    android:text="@string/article_subtitle2"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                    android:textColor="#0B0A0A"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/ivDetailPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="144dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/koruptor" />

                <TextView
                    android:id="@+id/article"
                    android:layout_width="wrap_content"
                    android:layout_height="514dp"
                    android:autoLink="web"
                    android:lineSpacingExtra="@dimen/line_spacing"
                    android:padding="@dimen/padding_regular"
                    android:text="@string/article_text2"
                    android:textSize="16dp" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>